Fix Line Break In Menu List View

--- a/app/react/src/styles/common/form.less
+++ b/app/react/src/styles/common/form.less
@@ -113,6 +113,7 @@
       justify-content: space-between;
       .selector {
         padding: 0 20px 0 0;
+        flex: 0;
       }
       .image-title{
         margin: 0 10px 0 0;
@@ -123,6 +124,7 @@
       .content {
         padding: 20px 0 20px 50px;
         flex-grow: 1;
+        flex: 1;
         -webkit-flex-grow: 1;
         .title {
           font-size: 1.1em;
@@ -133,6 +135,8 @@
           font-size: 1em;
           letter-spacing: 0.4px;
           color: @text-color-secondary;
+         
+
         }
       }
       .content.alone {
